--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 
     <section id="portfolio">
         <!-- 作品预览框 -->
+        <a href="photograph.html" class="portfolio-item">
+            <h3>作品标题1</h3>
+            <p>作品描述1</p>
+        </a>
         <div class="portfolio-item" onclick="openProjectDetails('project1')">
             <h3>作品标题1</h3>
             <p>作品描述1</p>
