--- a/photograph.html
+++ b/photograph.html
@@ -74,7 +74,7 @@
         var projectId = getParameterByName('id');
         var projectTitle = "作品标题" + projectId;
         var projectDescription = "作品描述" + projectId;
-        var projectImageUrl = "https://via.placeholder.com/800x400"; // 替换为实际的图片URL
+        var projectImageUrl = "https://github.com/gueess/gueess.github.io/blob/main/1633700889696.jpeg"; // 替换为实际的图片URL
 
         // 更新页面内容
         document.getElementById('project-title').innerText = projectTitle;
