--- a/index.html
+++ b/index.html
@@ -60,27 +60,27 @@
 <body>
 
     <header>
-        <h1>个人作品展示</h1>
+        <h1>欢迎来到joe的作品展示网站</s></h1>
     </header>
 
     <section>
         <div id="bio">
             <h2>个人介绍</h2>
-            <p>你的个人介绍文字在这里。</p>
+            <p>这里是joe，我在这个网站里存放了我的摄影作品和文章</p>
         </div>
 
         <div id="contact">
             <h2>联系方式</h2>
-            <p>Email: your.email@example.com</p>
-            <p>电话: 123-456-7890</p>
+            <p>Email:joooooe-z@foxmail.com</p>
+            <p>电话: 保密</p>
         </div>
     </section>
 
     <section id="portfolio">
         <!-- 作品预览框 -->
         <a href="photograph.html" class="portfolio-item">
-            <h3>作品标题1</h3>
-            <p>作品描述1</p>
+            <h3>日出</h3>
+            
         </a>
         <div class="portfolio-item" onclick="openProjectDetails('project1')">
             <h3>作品标题1</h3>
