--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
     <section id="portfolio">
         <!-- 作品预览框 -->
-        <a href="photograph.html" class="portfolio-item">
-            <h3>日出</h3>
+        <a href="photo1.html" class="portfolio-item">
+            <h3>长江路演</h3>
             
         </a>
         <div class="portfolio-item" onclick="openProjectDetails('project1')">
