--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <h3>长江路演</h3>
             
         </a>
-        <div class="portfolio-item" onclick="openProjectDetails('project1')">
-            <h3>作品标题1</h3>
-            <p>作品描述1</p>
+        <a href="photograph.html" class="portfolio-item">
+            <h3>日出</h3>
+           
         </div>
 
         <div class="portfolio-item" onclick="openProjectDetails('project2')">
