--- a/photo2.html
+++ b/photo2.html
@@ -43,9 +43,9 @@
     </div>
     <div class="gallery">
         <!-- 在这里放置图片URL -->
-        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_8896.JPG?e=1722671798&token=O9BIkxPGzT_f8iWySGnR-puayaoyv97B8CIGGBqH:enfahkZsHyUowhZUiJcgcGZrwD0=" >
-        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_9011.JPG?e=1722671728&token=O9BIkxPGzT_f8iWySGnR-puayaoyv97B8CIGGBqH:N6gYwuVg76PCTNYz4iS5eRdl-IY=" >
-        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_9044.JPG?e=1722671751&token=O9BIkxPGzT_f8iWySGnR-puayaoyv97B8CIGGBqH:e1Fo5mqQtmlycHSJGvof18HQztg=" >
+        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_8896.JPG" >
+        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_9011.JPG" >
+        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_9044.JPG" >
         <!-- 添加更多图片 -->
     </div>
 </body>
