--- a/photo1.html
+++ b/photo1.html
@@ -74,7 +74,7 @@
         var projectId = getParameterByName('id');
         var projectTitle = "作品标题" + projectId;
         var projectDescription = "作品描述" + projectId;
-        var projectImageUrl = "http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_8896.JPG?e=1722657045&token=O9BIkxPGzT_f8iWySGnR-puayaoyv97B8CIGGBqH:zCNvc08jMN-qlsBpPY02rvPPRu0="; 
+        var projectImageUrl = "https://raw.githubusercontent.com/gueess/gueess.github.io/aa88ac511ae1e9b5e4587c2a9056df0802e10baa/1633700889696.jpeg"; 
                                 // 替换为实际的图片URL
 
         // 更新页面内容
