--- a/index.html
+++ b/index.html
@@ -84,13 +84,11 @@
         </a>
         <a href="photograph.html" class="portfolio-item">
             <h3>日出</h3>
-           
-        </div>
+        </a>
 
-        <div class="portfolio-item" onclick="openProjectDetails('project2')">
-            <h3>作品标题2</h3>
-            <p>作品描述2</p>
-        </div>
+         <a href="photo1.html" class="portfolio-item">
+            <h3>日出(github链接)</h3>
+        </a>
 
         <!-- 添加更多作品预览框 -->
 
