--- a/photo2.html
+++ b/photo2.html
@@ -10,30 +10,47 @@
             padding: 0;
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
+            overflow: hidden; /* 隐藏多余滚动条 */
         }
 
-        .gallery {
+        .gallery-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow-y: scroll;
+            scroll-snap-type: y mandatory; /* 滚动时自动对齐图片 */
+        }
+
+        /* .gallery {
             display: flex;
             flex-direction: column;
             align-items: center;
             overflow-y: scroll;
             height: 100vh;
-        }
+        } */
 
         .gallery img {
-            width: 100%;
+            /* width: 100%;
             max-width: 600px;
-            margin-bottom: 10px;
+            margin-bottom: 10px; */
+            width: 100%;
+            height: 100vh; /* 确保图片填充整个页面 */
+            object-fit: contain; /* 保持图片比例，可能会有空白区域 */
+            scroll-snap-align: start; /* 滚动时自动对齐图片 */
         }
 
         .header {
-            position: sticky;
+            position: fixed;
             top: 0;
             background: #333;
             color: #fff;
             width: 100%;
             text-align: center;
             padding: 10px 0;
+            z-index: 1;
+
         }
     </style>
 </head>
@@ -41,12 +58,20 @@
     <div class="header">
         <h1>长江边路演</h1>
     </div>
-    <div class="gallery">
+        <div class="gallery">
         <!-- 在这里放置图片URL -->
-        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_8896.JPG" >
-        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_9011.JPG" >
-        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_9044.JPG" >
+        <img  src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_8896.JPG" >
+       
         <!-- 添加更多图片 -->
     </div>
+    <div>
+
+    <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_9011.JPG" >
+    </div>
+    <div>
+
+        <img src="http://shmi1le6f.hn-bkt.clouddn.com/20240714zhangjiangsinging/_MG_9044.JPG" >
+        </div>
+   
 </body>
 </html>
