--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section id="portfolio">
         <!-- 作品预览框 -->
         <a href="photo4.html" class="portfolio-item">
-            <h3>长江路演</h3>
+            <h3>长江边路演</h3>
             
         </a>
         <a href="photograph.html" class="portfolio-item">
