--- a/photo4.html
+++ b/photo4.html
@@ -100,7 +100,9 @@
                 </div>
                 <div class="single-photo-container">
                     <div class="single-photo" style="background-image: url('https://i.postimg.cc/wM8cGv2T/MG-8943.jpg');"></div>
+                    <div class="single-photo" style="background-image: url('https://i.postimg.cc/NGWCtpT4/1633700889696.jpg');"></div>
                 </div>
+                
             </div>
         </div>
     </div>
