--- a/photo4.html
+++ b/photo4.html
@@ -99,7 +99,7 @@
                     <img src="https://i.postimg.cc/xjMPbvjk/MG-9019.jpg" alt="摄影作品8" style="width: 100%; height: auto;">
                 </div>
                 <div class="single-photo-container">
-                    <div class="single-photo" style="background-image: url('https://i.postimg.cc/wM8cGv2T/MG-8943.jpg');"></div>
+                    <div class="single-photo" style="background-image: url('https://i.postimg.cc/NGWCtpT4/1633700889696.jpg');"></div>
                     <div class="single-photo" style="background-image: url('https://i.postimg.cc/NGWCtpT4/1633700889696.jpg');"></div>
                 </div>
                 
