--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
             <h3>日出(github链接)</h3>
         </a>
 
+         <a href="photo1.html" class="portfolio-item">
+            <h3>如何向ai提问</h3>
+        </a>
+
         <!-- 添加更多作品预览框 -->
 
     </section>
