--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h3>日出(github链接)</h3>
         </a>
 
-         <a href="photo1.html" class="portfolio-item">
+         <a href="Article1.html" class="portfolio-item">
             <h3>如何向ai提问</h3>
         </a>
 
