--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <h3>日出</h3>
         </a>
 
-         <a href="photo1.html" class="portfolio-item">
-            <h3>日出(github链接)</h3>
-        </a>
+        // <a href="photo1.html" class="portfolio-item">
+           // <h3>日出(github链接)</h3>
+        //</a>
 
          <a href="Article1.html" class="portfolio-item">
             <h3>如何向ai提问</h3>
