--- a/Article1.html
+++ b/Article1.html
@@ -1,4 +1,30 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>Markdown 渲染示例</title>
+    <!-- 引入 marked 库 -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- 可选：引入 GitHub 风格样式，快速美化 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css/github-markdown.min.css">
+    <style>
+        /* 页面容器样式 */
+        .container {
+            max-width: 900px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <!-- Markdown 内容将渲染到这个容器中 -->
+        <div class="markdown-body" id="mdContainer"></div>
+    </div>
 
+    <script>
+        // 步骤2：复制你的 Markdown 内容到这里
+        const mdContent = `
 
 ## 一、引言
 
@@ -24,13 +50,13 @@
 
 ### （二）个人执行深层痛点
 
-6. 面对复杂问题容易逃避，没办法深入梳理需求就急于提问，导致提问缺乏针对性。
+1. 面对复杂问题容易逃避，没办法深入梳理需求就急于提问，导致提问缺乏针对性。
 
-7. 害怕沟通、嫌麻烦，尤其是 AI 后续追问的问题太多时，不知道该从何回答，干脆敷衍回应，最终导致 AI 后续输出的精准度下降。
+2. 害怕沟通、嫌麻烦，尤其是 AI 后续追问的问题太多时，不知道该从何回答，干脆敷衍回应，最终导致 AI 后续输出的精准度下降。
 
-8. 对 AI 生成的结果不满意，但又说不出具体哪里不好，难以及时给出有效的优化指令。
+3. 对 AI 生成的结果不满意，但又说不出具体哪里不好，难以及时给出有效的优化指令。
 
-9. 容易过度依赖 AI，缺乏对生成内容的把关意识，甚至不检查就直接使用，后续常常出现问题。
+4. 容易过度依赖 AI，缺乏对生成内容的把关意识，甚至不检查就直接使用，后续常常出现问题。
 
 ## 三、好问题的核心定义与判断标准
 
@@ -38,9 +64,9 @@
 
 进一步可分为两类场景的标准：
 
-10. 信息获取类问题：优先级是准确度，要求 AI 能理解提问意图，并给出延伸信息，而不只是简单回应表面需求。
+1. 信息获取类问题：优先级是准确度，要求 AI 能理解提问意图，并给出延伸信息，而不只是简单回应表面需求。
 
-11. 任务执行类问题：需要明确目标、使用场景、交付形式等核心信息，让 AI 清楚 “做什么、给谁用、做成什么样”。
+2. 任务执行类问题：需要明确目标、使用场景、交付形式等核心信息，让 AI 清楚 “做什么、给谁用、做成什么样”。
 
 从本质上来说，就是把 AI 当作能力强但缺乏具体场景认知的新员工，用清晰的指令引导它一步步完成任务。
 
@@ -48,15 +74,15 @@
 
 结合上面提到的使用痛点，我总结了几个应对办法：
 
-12. 任务拆解：先将大任务拆分为多个核心板块，自己先梳理出大致方向，再逐一向 AI 提问。这个过程也可以和 AI 讨论拆解逻辑，比如要研究 “复制某公司功能”，就可以拆分为 “复制目的、核心功能点、实施难度、预期效果” 等方向，分别展开讨论。
+1. 任务拆解：先将大任务拆分为多个核心板块，自己先梳理出大致方向，再逐一向 AI 提问。这个过程也可以和 AI 讨论拆解逻辑，比如要研究 “复制某公司功能”，就可以拆分为 “复制目的、核心功能点、实施难度、预期效果” 等方向，分别展开讨论。
 
-13. 优化提问流程：先用对话模式和 AI 确认关键问题，明确核心需求后，再切换到深度研究模式。不过在这个过程中，我有时会对内容把控不足、心里没底，后续可以尝试先自行预测理想效果，再对比 AI 输出判断是否符合预期。
+2. 优化提问流程：先用对话模式和 AI 确认关键问题，明确核心需求后，再切换到深度研究模式。不过在这个过程中，我有时会对内容把控不足、心里没底，后续可以尝试先自行预测理想效果，再对比 AI 输出判断是否符合预期。
 
-14. 精准提供上下文：主动向 AI 说明任务背景、目标、使用人群和交付要求，避免 AI 在后续论述中反复询问基础信息。也可以提前和 AI 约定，让它先确认所有不清楚的背景细节，再给出方案和思路。
+3. 精准提供上下文：主动向 AI 说明任务背景、目标、使用人群和交付要求，避免 AI 在后续论述中反复询问基础信息。也可以提前和 AI 约定，让它先确认所有不清楚的背景细节，再给出方案和思路。
 
-15. 框架先行：先让 AI 输出基础框架，待框架确认无误后，再让它填充具体内容，避免后续大面积返工。
+4. 框架先行：先让 AI 输出基础框架，待框架确认无误后，再让它填充具体内容，避免后续大面积返工。
 
-16. 多重校验：对 AI 生成的内容进行反复质问，询问信息的准确性，要求它进行优化。如果对结果仍有疑虑，还可以开一个新的对话框，将内容同步过去让 AI 交叉检查。
+5. 多重校验：对 AI 生成的内容进行反复质问，询问信息的准确性，要求它进行优化。如果对结果仍有疑虑，还可以开一个新的对话框，将内容同步过去让 AI 交叉检查。
 
 ## 五、实战案例
 
@@ -82,3 +108,11 @@
 
 最后想说，用好 AI 的过程也是自我成长的过程。在这个过程中，我不仅慢慢优化了提问方式，还在克服拖延、逃避等不良习惯，这也是使用 AI 带来的额外收获。
 
+`;
+
+        // 步骤3：用 marked 解析 Markdown 并渲染到页面
+        const html = marked.parse(mdContent);
+        document.getElementById('mdContainer').innerHTML = html;
+    </script>
+</body>
+</html>
