--- a/Article1.html
+++ b/Article1.html
@@ -30,7 +30,8 @@
 
     <script>
         // 修复后的 Markdown 内容：统一引号格式、清理多余空格
-        const mdContent = `#如何向ai提问 ## 一、引言
+        const mdContent = `# 如何向ai提问 
+## 一、引言
 在日常工作中，我会经常使用 AI 处理竞品调研、功能梳理、文档整理等事务。但实际使用下来，我发现 AI 给出的反馈效果并不理想。
 
 网上有不少资料显示，很多人已经能高效运用 AI——比如数学家陶哲轩会借助 AI 拓展思路、探索问题的其他解法。各类评测也能证明，AI 的能力早已足够强大，它具备丰富的背景知识和一定的逻辑思考能力，用来完成系列重复工作完全游刃有余。
