add jiefang park and edit index

--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
         <div id="bio">
             <h2>个人介绍</h2>
             <p>这里是joe，我在这个网站里存放了我的摄影作品和文章</p>
+            <p>留下些什么给以后的自己看</p>
         </div>
 
         <div id="contact">
             <h2>联系方式</h2>
             <p>Email:joooooe-z@foxmail.com</p>
-            <p>电话: 保密</p>
+            
         </div>
     </section>
 
@@ -82,13 +83,13 @@
             <h3>长江边路演</h3>
             
         </a>
-        <a href="photograph.html" class="portfolio-item">
+        <!-- <a href="photograph.html" class="portfolio-item">
             <h3>日出</h3>
-        </a>
+        </a> -->
 
-        // <a href="photo1.html" class="portfolio-item">
+        <!-- // <a href="photo1.html" class="portfolio-item">
            // <h3>日出(github链接)</h3>
-        //</a>
+        //</a> -->
 
          <a href="Article1.html" class="portfolio-item">
             <h3>如何向ai提问</h3>
